Basis of page footer + fixed navbar that didn't collapsed properly.

--- a/website/lepidoptera/static/lepidoptera/lepidoptera.css
+++ b/website/lepidoptera/static/lepidoptera/lepidoptera.css
@@ -1,3 +1,8 @@
 #main-navigation {
     margin-bottom: 20px;
 }
+
+div#footer {
+    margin-top: 20px;
+    background-color: #007Bff;
+}
